tweaked width of filter search box to prevent wrapping

--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -560,8 +560,8 @@ ul#filter {
     display: inline;
     float: left;
     height: 29px;
-    margin: 0 10px 0 0;
-    width: 77px;
+    margin: 0 6px 0 0;
+    width: 67px;
     form {
       display: inline;
       margin: 6px 0 0 0 !important;
@@ -592,7 +592,7 @@ ul#filter {
       padding: 5px 0 0 0;
       text-align: center;
       text-decoration: none;
-      width: 77px;
+      width: 67px;
       &:hover {
         border: 1px solid #555555; } } }
   li:last-child {
